# ai-digital-twin

./: .gitignore  README.md  app.py  pyproject.toml
info/: summary.txt
