[project]
name = "digital-twin-vedant"
version = "0.1.0"
description = "Digital twin chatbot for Vedant Pandit's website"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pypdf>=3.17.0",
    "gradio>=4.0.0",
]

[tool.uv]
# Mark this as a script-only project without a package
package = false

